--- a/domestic.html
+++ b/domestic.html
@@ -21,9 +21,9 @@
 						<li><a href="domestic.html">DOMESTIC PACKAGES</a></li>
 						<li><a href="international.html">INTERNATIONAL PACKAGES</a></li>
 						
-						<li><a href="#">ABOUT US</a></li>
-						<li><a href="#">CONTACT US</a></li>
-						<li><a href="#">TRAVEL NEWS</a></li>
+						<li><a href="setting.html">ABOUT US</a></li>
+						<li><a href="setting.html">CONTACT US</a></li>
+						<li><a href="setting.html">TRAVEL NEWS</a></li>
 					</ul>
 					<label for="nav-toggle" class="icon-burger">
 						<div class="line"></div>
